--- a/app/views/spree/_ecommerce_view.html.erb
+++ b/app/views/spree/_ecommerce_view.html.erb
@@ -1,5 +1,5 @@
 _paq.push(['setEcommerceView',
-  '<%= product.sku %>',
+  '<%= product.to_s %>',
   '<%= product.name %>',
   <%= raw product.categories.to_json %>,
   <%= product.price %>
