--- a/app/views/spree/_ecommerce_item.html.erb
+++ b/app/views/spree/_ecommerce_item.html.erb
@@ -1,5 +1,5 @@
 _paq.push(['addEcommerceItem',
-  '<%= ecommerce_item.slug %>',
+  '<%= ecommerce_item.sku %>',
   '<%= ecommerce_item.name %>',
   <%= raw ecommerce_item.categories.to_json %>,
   <%= ecommerce_item.price %>,
