remplace setEcommerceView product.slug by product.sku

--- a/app/views/spree/_ecommerce_view.html.erb
+++ b/app/views/spree/_ecommerce_view.html.erb
@@ -1,5 +1,5 @@
 _paq.push(['setEcommerceView',
-  '<%= product.slug %>',
+  '<%= product.sku %>',
   '<%= product.name %>',
   <%= raw product.categories.to_json %>,
   <%= product.price %>
