add visitorId logging

--- a/app/views/spree/_ecommerce_item.html.erb
+++ b/app/views/spree/_ecommerce_item.html.erb
@@ -5,3 +5,6 @@ _paq.push(['addEcommerceItem',
   <%= ecommerce_item.price %>,
   <%= ecommerce_item.quantity %>
   ]);
+var visitor_id;
+_paq.push([ function() { visitor_id = this.getVisitorId(); }]);
+console.log("ACCOVIA visitor_id="+visitor_id);
