--- a/app/views/spree/_piwik.html.erb
+++ b/app/views/spree/_piwik.html.erb
@@ -5,8 +5,8 @@
 	<!-- ACCOVIA -->
 	var visitor_id;
     _paq.push([ function() { visitor_id = this.getVisitorId(); } ]);
-	console.log("ACCOVIA visitor_id=" + visitor_id);
-    
+console.log("ACCOVIA piwik visitor_id="+visitor_id+" aaa "+piwik_client+piwik_client.getVisitorId());
+
     (function(){ var u=(('https:' == document.location.protocol) ? 'https://<%= piwik_client.url %>/' : 'http://<%= piwik_client.url %>/');
     _paq.push(['setSiteId', <%= piwik_client.site_id %>]);
     _paq.push(['setTrackerUrl', u+'piwik.php']);
