--- a/app/views/spree/_piwik.html.erb
+++ b/app/views/spree/_piwik.html.erb
@@ -5,7 +5,7 @@
 	<!-- ACCOVIA -->
 	var visitor_id;
     _paq.push([ function() { visitor_id = this.getVisitorId(); } ]);
-console.log("ACCOVIA piwik visitor_id="+visitor_id+" aaa "+piwik_client+piwik_client.getVisitorId());
+console.log("ACCOVIA piwik visitor_id="+visitor_id);
 
     (function(){ var u=(('https:' == document.location.protocol) ? 'https://<%= piwik_client.url %>/' : 'http://<%= piwik_client.url %>/');
     _paq.push(['setSiteId', <%= piwik_client.site_id %>]);
