--- a/app/views/spree/_ecommerce_order.html.erb
+++ b/app/views/spree/_ecommerce_order.html.erb
@@ -9,5 +9,5 @@ _paq.push(['trackEcommerceOrder',
 var visitor_id;
 _paq.push([ function() { visitor_id = this.getVisitorId(); }]);
 console.log("ACCOVIA visitor_id="+visitor_id);
-
+console.log("sd="+_paq);
 
