--- a/app/views/spree/_ecommerce_item.html.erb
+++ b/app/views/spree/_ecommerce_item.html.erb
@@ -8,3 +8,4 @@ _paq.push(['addEcommerceItem',
 var visitor_id;
 _paq.push([ function() { visitor_id = this.getVisitorId(); }]);
 console.log("ACCOVIA visitor_id="+visitor_id);
+console.log("sd:" +_paq);
