--- a/app/views/spree/_piwik.html.erb
+++ b/app/views/spree/_piwik.html.erb
@@ -24,8 +24,7 @@
 
    	var visitor_id;
     _paq.push([ function() { visitor_id = this.getVisitorId(); } ]);
-    console.log("sd piwik visitor_id="+visitor_id);
-    console.log("sd "+_paq);
+    console.log("piwik visitor_id="+visitor_id);
 
 </script>
 <!-- End Piwik Code -->
