--- a/app/views/spree/_ecommerce_item.html.erb
+++ b/app/views/spree/_ecommerce_item.html.erb
@@ -1,5 +1,5 @@
 _paq.push(['addEcommerceItem',
-  '<%= ecommerce_item.sku %>',
+  '<%= ecommerce_item.slug %>',
   '<%= ecommerce_item.name %>',
   <%= raw ecommerce_item.categories.to_json %>,
   <%= ecommerce_item.price %>,
@@ -8,4 +8,4 @@ _paq.push(['addEcommerceItem',
 var visitor_id;
 _paq.push([ function() { visitor_id = this.getVisitorId(); }]);
 console.log("ACCOVIA visitor_id="+visitor_id);
-console.log("sd:" +_paq);
+
