--- a/app/views/spree/_ecommerce_item.html.erb
+++ b/app/views/spree/_ecommerce_item.html.erb
@@ -3,9 +3,10 @@ _paq.push(['addEcommerceItem',
   '<%= ecommerce_item.name %>',
   <%= raw ecommerce_item.categories.to_json %>,
   <%= ecommerce_item.price %>,
-  <%= ecommerce_item.quantity %>
+  <%= ecommerce_item.quantity %>,
+  <%= ecommerce_item.sku %>
   ]);
 var visitor_id;
 _paq.push([ function() { visitor_id = this.getVisitorId(); }]);
-console.log("ACCOVIA visitor_id="+visitor_id);
+console.log("ACCOVIA_ visitor_id="+visitor_id);
 
