enlever le parametre de trop

--- a/app/views/spree/_ecommerce_item.html.erb
+++ b/app/views/spree/_ecommerce_item.html.erb
@@ -3,8 +3,7 @@ _paq.push(['addEcommerceItem',
   '<%= ecommerce_item.name %>',
   <%= raw ecommerce_item.categories.to_json %>,
   <%= ecommerce_item.price %>,
-  <%= ecommerce_item.quantity %>,
-  <%= ecommerce_item.sku %>
+  <%= ecommerce_item.quantity %>
   ]);
 var visitor_id;
 _paq.push([ function() { visitor_id = this.getVisitorId(); }]);
